--- a/index.html
+++ b/index.html
@@ -2288,7 +2288,8 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 
     </div>
   </details>
-</div>
+
+  <!-- XOmmented this out </div>
 
 <!-- ✅ TRANSPARENCY PANEL -->
 <div class="card"
