--- a/index.html
+++ b/index.html
@@ -2545,7 +2545,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
       <!-- AUDIO PLAYER -->
       <div style="margin-top:18px;">
         <audio id="novakAudio" controls preload="metadata" style="width:100%; border-radius:8px;">
-          <source src="https://raw.githubusercontent.com/YOUR_GITHUB_USERNAME/YOUR_REPO/main/audio/song.mp3" type="audio/mpeg">
+          <source src="https://novakprotocol.github.io/NOVAK-Hash-Monitor/audio/Break the Chain.mp3" type="audio/mpeg">
         </audio>
       </div>
 
