--- a/index.html
+++ b/index.html
@@ -2563,7 +2563,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 
       <!-- DOWNLOAD BUTTON -->
       <a id="downloadSong"
-         href="https://raw.githubusercontent.com/YOUR_GITHUB_USERNAME/YOUR_REPO/main/audio/song.mp3"
+         href="https://novakprotocol.github.io/NOVAK-Hash-Monitor/audio/Break the Chain.mp3"
          download="BreakTheChain.mp3"
          class="action-btn"
          style="margin-top:10px; display:inline-block;">
