--- a/index.html
+++ b/index.html
@@ -2549,7 +2549,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
       <div style="margin-top:18px;">
         <audio id="novakAudio" controls preload="metadata"
                style="width:100%; border-radius:8px;">
-          <source src="https://novakprotocol.github.io/NOVAK-Hash-Monitor/audio/break_the_chain.mp3" 
+          <source src="https://novakprotocol.github.io/NOVAK-Hash-Monitor/audio/Break the Chain.mp3" 
                   type="audio/mpeg">
         </audio>
       </div>
@@ -2570,7 +2570,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
       <!-- ⬇ DOWNLOAD MP3                                         -->
       <!-- ====================================================== -->
       <a id="downloadSong"
-         href="https://novakprotocol.github.io/NOVAK-Hash-Monitor/audio/break_the_chain.mp3"
+         href="https://novakprotocol.github.io/NOVAK-Hash-Monitor/audio/Break the Chain.mp3"
          download="Break_The_Chain.mp3"
          class="action-btn"
          style="margin-top:10px; display:inline-block;">
