--- a/index.html
+++ b/index.html
@@ -2758,7 +2758,7 @@ NOVAK Strict Mode:
   <a href="https://www.padi.com" target="_blank" rel="noopener noreferrer">www.padi.com</a><br>
 <br>
   PADI Project Aware Foundation
-  <a href="https://www.padi.com/aware target="_blank" rel="noopener noreferrer">www.padi.com/aware</a><br>
+  <a href="https://www.padi.com/aware" target="_blank" rel="noopener noreferrer">www.padi.com/aware</a><br>
 <br>
   o7 Star Citizen Referral —
   <a href="https://www.robertsspaceindustries.com/enlist?referral=STAR-KRN7-SJTX"
