--- a/index.html
+++ b/index.html
@@ -2781,9 +2781,7 @@ NOVAK Strict Mode:
      target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
 
 <p>
-  Donations:
-  <a href="mailto:matthew@novakprotocol.com?subject=NOVAK%20Support%20or%20Donation">
-    matthew@novakprotocol.com
+  Donations::matthew@novakprotocol.com
   </a>
 </p>
 
