--- a/index.html
+++ b/index.html
@@ -1459,10 +1459,10 @@ NOVAK Protocol       | BEFORE action     | Input=Rule=Output match | ✅ YES
 <h3 style="margin-top:32px; font-size:20px;">❓ Why Isn’t This Already Being Done?</h3>
 
 <ul style="margin-left:20px; margin-top:8px; line-height:1.6;">
-  <li>• Legacy systems only verify <strong>after</strong> execution (logging model)</li>
-  <li>• No existing standard mandates proof-before-action</li>
-  <li>• Most agencies rely on “trust the system,” not “prove correctness”</li>
-  <li>• Hash checks are usually optional — not enforced at the execution layer</li>
+  <li>Legacy systems only verify <strong>after</strong> execution (logging model)</li>
+  <li>No existing standard mandates proof-before-action</li>
+  <li>Most agencies rely on “trust the system,” not “prove correctness”</li>
+  <li>Hash checks are usually optional — not enforced at the execution layer</li>
 </ul>
 
 <p style="margin-top:12px; font-weight:600;">
