--- a/index.html
+++ b/index.html
@@ -2773,7 +2773,8 @@ NOVAK Strict Mode:
   
 <!-- ✅ FOOTER -->
 <footer style="text-align:center; margin-top:60px; font-size:14px; opacity:0.85; line-height:1.5;">
-  NOVAK Protocol — Novak Objective Verification of Autonomous Knowledge<br>
+  NOVAK Protocol
+  <br>Novak Objective Verification of Autonomous Knowledge<br>
   Proof-Before-Action — Patent Pending — Copyright © 2025 Matthew Novak<br><br>
 
   PADI 30-Year Member IDC Staff Instructor #888850 —
@@ -2786,12 +2787,12 @@ NOVAK Strict Mode:
      target="_blank" rel="noopener noreferrer">STAR-KRN7-SJTX</a><br><br>
 
 <p>
-  Donations::matthew@novakprotocol.com
+  Donations: matthew@novakprotocol.com
   </a>
 </p>
 
   <br>
-  Nothing stored, logged, transmitted, analyzed, monitored, sold, or shared.<br>
+  Nothing stored, logged, transmitted, analyzed, monitored, sold, or shared.<br><br>
   100% local, private, client-side cryptographic verification.
 </footer>
 
