--- a/index.html
+++ b/index.html
@@ -1480,7 +1480,7 @@ NOVAK Protocol       | BEFORE action     | Input=Rule=Output match | ✅ YES
 <h3 style="margin-top:26px; font-size:20px;">🔑 The Entire Difference in One Sentence</h3>
 
 <p style="font-weight:700; font-size:17px; margin-top:10px;">
-  <strong>SHA today tells you what happened.</strong><br>
+  <strong>SHA today tells you what happened.</strong><br><br>
   <strong>NOVAK uses SHA to decide what is allowed to happen.</strong>
 </p>
  
