--- a/index.html
+++ b/index.html
@@ -2778,7 +2778,8 @@ NOVAK Strict Mode:
 <footer style="text-align:center; margin-top:60px; font-size:14px; opacity:0.85; line-height:1.5;">
   NOVAK Protocol
   <br>Novak Objective Verification of Autonomous Knowledge<br>
-  Proof-Before-Action — Patent Pending — Copyright © 2025 Matthew Novak<br><br>
+  Proof-Before-Action<br>
+  Patent Pending — Copyright © 2025 Matthew Novak<br><br>
 
   PADI 30-Year Member IDC Staff Instructor #888850 —
   <a href="https://www.padi.com" target="_blank" rel="noopener noreferrer">www.padi.com</a><br>
