--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@ html[data-theme="dark"] .aud-btn.active {
     </div>
 
     <p style="margin-top:8px; font-size:16px; line-height:1.6;">
-      If you type <strong>TEST</strong> (all caps) below example datasets, NOVAK produces the following results.
+      If you type <strong>TEST</strong> (all caps) in the field below example datasets, NOVAK produces the following results.
       Change one letter and everything changes — the <em>avalanche effect</em>.
     </p>
 
